[package]
name = "defmt-example"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
kfilter = { path = "../..", features = ["defmt"] }
nalgebra = { version = "0.33.2", default-features = false, features = ["libm"] }
panic-probe = { version = "1.0.0", features = ["defmt"] }
